--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.5</version>
+    <version>3.0.6</version>
     <relativePath/>
   </parent>
 
@@ -19,6 +19,11 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
 
     <dependency>
@@ -73,8 +78,7 @@
               <executable>npm</executable>
               <arguments>
                 <argument>install</argument>
-                <argument>--no-optional</argument>
-                <argument>--max-old-space-size=250</argument>
+                <argument>--force</argument>
               </arguments>
             </configuration>
           </execution>
@@ -89,7 +93,6 @@
               <arguments>
                 <argument>run</argument>
                 <argument>build</argument>
-                <argument>--max-old-space-size=250</argument>
               </arguments>
             </configuration>
           </execution>
